feat: Harmonize ensembl and refseq `annotate seqvars` TSV output (#773)
